<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BottomSheet</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="print">Print</string>
    <string name="call">Call</string>
    <string name="help">Help</string>
    <string name="bottomsheet">BottomSheet Sample</string>

</resources>
